Call PokerClock elm module in index

--- a/index.html
+++ b/index.html
@@ -2,3 +2,12 @@
 <h2>00:00</h2>
 <button>Play</button>
 <button>Pause</button>
+
+<div id="poker_clock"></div>
+
+<script src="PokerClock.js"></script>
+<script>
+var div = document.getElementById('poker_clock');
+Elm.embed(Elm.PokerClock, div);
+
+</script>
