Allow the beep to loop when the timer ends

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <div id="poker_clock"></div>
-<audio id="times-up" src="beep.mp3"></audio>
+<audio id="times-up" src="beep.mp3" loop="true"></audio>
 
 <script src="NoSleep.js"></script>
 <script src="PokerClock.js"></script>
