Hide the play/pause button when the clock hits zero

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <div id="poker_clock"></div>
 <audio id="times-up" src="beep.mp3" loop="true"></audio>
 
+<style>.hidden { display: none; }</style>
+
 <script src="NoSleep.js"></script>
 <script src="PokerClock.js"></script>
 <script>
